force-app/main/default/objects/D365_Project_Stand_in__c/D365_Project_Stand_in__c.object-meta.xml
<CustomObject>
    <description>Dummy object to allow for appropriate filtering on D365 Projects</description>
    <label>D365 Project Stand-in</label>
    <nameField>
        <displayFormat>D365S-{000000}</displayFormat>
        <label>D365 Project Stand-in Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>D365 Project Stand-ins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>