force-app/main/default/objects/D365_Project_Stand_in__c/fields/Programme_Unit__c.field-meta.xml
<CustomField>
    <fullName>Programme_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ampi__Geographical_Area__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organisational Unit</value>
        </filterItems>
        <filterItems>
            <field>ampi__Geographical_Area__c.ampi__Parent_Geographical_Area__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_Programme_Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>D365 Project Stand-ins</relationshipLabel>
    <relationshipName>D365_Project_Stand_ins</relationshipName>
    <type>Lookup</type>
</CustomField>