force-app/main/default/objects/D365_Project_Stand_in__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>D365 Project Stand-ins</relationshipLabel>
    <relationshipName>D365_Project_Stand_ins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>