force-app/main/default/objects/D365_Project_Stand_in__c/fields/Project_Programme_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Programme_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ampi__Geographical_Area__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Programme</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>D365 Project Stand-ins (Project Programme Location)</relationshipLabel>
    <relationshipName>D365_Project_Stand_ins1</relationshipName>
    <type>Lookup</type>
</CustomField>