force-app/main/default/objects/D365_Project_Stand_in__c/validationRules/Project_Programme_Location_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Programme_Location_Restriction</fullName>
    <active>false</active>
    <errorConditionFormula>Project_Programme_Location__r.ampi__Parent_Geographical_Area__r.Name &lt;&gt; Project__r.Country_of_Implementation__c</errorConditionFormula>
    <errorMessage>Select a Project Programme Location from the same country as the country of the SOS Implementing Organisation</errorMessage>
</ValidationRule>