force-app/main/default/objects/D365_Project_Stand_in__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Programme_Unit__c</columns>
    <columns>Project_Programme_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>